--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,9 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build -t github-pages:$(cat version.txt) .
+            docker build -t github-pages .;
+            docker tag github-pages mrseccubus/github-pages:latest;
+            docker tag github-pages mrseccubus/github-pages:$(cat version.txt).$CIRCLE_BUILD_NUM
       - run:
           name: Build application Docker image
           command: |
