--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - image: alpine
     steps:
       - checkout
-      - setup_remote_docker
+      - setup_remote_docker:
         docker_layer_caching: true
       - run:
           name: Prerequisites
