--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,14 +5,14 @@ jobs:
     docker:
       - image: alpine
     steps:
-      - checkout
-      - setup_remote_docker:
-          docker_layer_caching: true
       - run:
           name: Prerequisites
           command: |
             apk update
-            apk add docker-cli
+            apk add docker-cli git ssh
+      - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
       - run:
           name: Build application Docker image
           command: |
