--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
           name: Push application Docker image
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASS 
+              echo $DOCKERHUB_PASS | docker login -u $DOCKERHUB_USER --password-stdin 
               docker push mrseccubus/github-pages:$(cat version.txt).$CIRCLE_BUILD_NUM
               docker push mrseccubus/github-pages:latest
             fi
