--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: /app
     docker:
-      - image: alpine
+      - image: ubuntu
     steps:
       - run:
           name: Prerequisites
@@ -11,18 +11,32 @@ jobs:
             apk update
             apk add docker-cli git openssh
       - checkout
-      - setup_remote_docker:
-          docker_layer_caching: true
+#      - setup_remote_docker:
+#          docker_layer_caching: true
+      - run:
+          name: Setup buildx and qemu
+          command: |
+            sudo apt-get update
+            sudo apt-get install -y qemu-user-static
+            sudo apt-get install -y binfmt-support
+      - run:
+          name: Check versions
+          command: |
+            qemu-aarch64-static --version
+            update-binfmts --version 
+      - run:
+          name: Create builder
+          command: |
+            export DOCKER_CLI_EXPERIMENTAL=enabled
+            docker buildx create --name arm-builder
+            docker buildx use arm-builder
+            docker buildx inspect --bootstrap      
       - run:
           name: Build application Docker image
           command: |
             docker build -t github-pages .;
             docker tag github-pages mrseccubus/github-pages:latest;
             docker tag github-pages mrseccubus/github-pages:$(cat version.txt).$CIRCLE_BUILD_NUM
-      - run:
-          name: Build application Docker image
-          command: |
-            docker build -t github-pages:latest .
       - deploy:
           name: Push application Docker image
           command: |
@@ -31,3 +45,7 @@ jobs:
               docker push mrseccubus/github-pages:$(cat version.txt).$CIRCLE_BUILD_NUM
               docker push mrseccubus/github-pages:latest
             fi
+      - deploy:
+          name: Build ARM docker
+          command: | 
+            DOCKER_CLI_EXPERIMENTAL=enabled docker buildx build --platform linux/arm64 --load -t mrseccbus/github-pages . --push
