--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,12 +5,12 @@ jobs:
     docker:
       - image: ubuntu
     steps:
-      - run:
-          name: Prerequisites
-          command: |
-            apk update
-            apk add docker-cli git openssh
-      - checkout
+#      - run:
+#          name: Prerequisites
+#          command: |
+#            apk update
+#            apk add docker-cli git openssh
+#      - checkout
 #      - setup_remote_docker:
 #          docker_layer_caching: true
       - run:
