--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,9 @@ jobs:
       - run:
           name: Setup buildx and qemu
           command: |
-            sudo apt-get update
-            sudo apt-get install -y qemu-user-static
-            sudo apt-get install -y binfmt-support
+            apt-get update
+            apt-get install -y qemu-user-static
+            apt-get install -y binfmt-support
       - run:
           name: Check versions
           command: |
