Install docker too

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,17 @@ jobs:
       - run:
           name: Setup buildx and qemu
           command: |
+            export TZ=Europe/Amsterdam
+            ln -snf /usr/share/zoneinfo/$TZ /etc/localtime
+            echo $TZ > /etc/timezone
             apt-get update
             apt-get install -y qemu-user-static
             apt-get install -y binfmt-support
+            apt-get install -y ca-certificates curl gnupg lsb-release
+            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+            echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
+            apt-get update
+            apt-get install -y docker-ce docker-ce-cli containerd.io
       - run:
           name: Check versions
           command: |
