--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,6 @@ jobs:
 #          command: |
 #            apk update
 #            apk add docker-cli git openssh
-#      - setup_remote_docker:
-#          docker_layer_caching: true
       - run:
           name: Setup buildx and qemu
           command: |
@@ -26,13 +24,14 @@ jobs:
             echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
             apt-get update
             apt-get install -y docker-ce docker-ce-cli containerd.io
-            service docker start
       - run:
           name: Check versions
           command: |
             qemu-aarch64-static --version
             update-binfmts --version 
       - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
       - run:
           name: Create builder
           command: |
