--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,48 +3,27 @@ jobs:
   build:
     working_directory: /app
     docker:
-      - image: ubuntu
+      - image: alpine
     steps:
-#      - run:
-#          name: Prerequisites
-#          command: |
-#            apk update
-#            apk add docker-cli git openssh
       - run:
-          name: Setup buildx and qemu
+          name: Prerequisites
           command: |
-            export TZ=Europe/Amsterdam
-            ln -snf /usr/share/zoneinfo/$TZ /etc/localtime
-            echo $TZ > /etc/timezone
-            apt-get update
-            apt-get install -y qemu-user-static
-            apt-get install -y binfmt-support
-            apt-get install -y ca-certificates curl gnupg lsb-release
-            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-            echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
-            apt-get update
-            apt-get install -y docker-ce docker-ce-cli containerd.io
-      - run:
-          name: Check versions
-          command: |
-            qemu-aarch64-static --version
-            update-binfmts --version 
+            apk update
+            apk add docker-cli git openssh
       - checkout
       - setup_remote_docker:
           docker_layer_caching: true
-      - run:
-          name: Create builder
-          command: |
-            export DOCKER_CLI_EXPERIMENTAL=enabled
-            docker buildx create --name arm-builder
-            docker buildx use arm-builder
-            docker buildx inspect --bootstrap      
+          version: 19.03.14
       - run:
           name: Build application Docker image
           command: |
             docker build -t github-pages .;
             docker tag github-pages mrseccubus/github-pages:latest;
             docker tag github-pages mrseccubus/github-pages:$(cat version.txt).$CIRCLE_BUILD_NUM
+      - run:
+          name: Build application Docker image
+          command: |
+            docker build -t github-pages:latest .
       - deploy:
           name: Push application Docker image
           command: |
@@ -53,7 +32,11 @@ jobs:
               docker push mrseccubus/github-pages:$(cat version.txt).$CIRCLE_BUILD_NUM
               docker push mrseccubus/github-pages:latest
             fi
-      - deploy:
-          name: Build ARM docker
-          command: | 
-            DOCKER_CLI_EXPERIMENTAL=enabled docker buildx build --platform linux/arm64 --load -t mrseccbus/github-pages . --push
+      - run: |
+          ssh remote-docker \<<EOF
+            sudo bash -c 'echo "{\"experimental\": true}" > /etc/docker/daemon.json'
+            sudo systemctl restart docker
+            sudo docker info
+          EOF
+      - run : |
+          docker buildx build --platform linux/arm64 --load --progress plain -t github-pages . --push
