--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,14 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: true
           version: 19.03.14
-      - run: |
-          ssh remote-docker <<EOF
-            sudo bash -c 'echo "{\"experimental\": true}" > /etc/docker/daemon.json'
-            sudo systemctl restart docker
-            sudo docker info
-          EOF
+#      - run: |
+#          ssh remote-docker <<EOF
+#            sudo bash -c 'echo "{\"experimental\": true}" > /etc/docker/daemon.json'
+#            sudo systemctl restart docker
+#            sudo docker info
+#          EOF
       - run : |
+          export DOCKER_CLI_EXPERIMENTAL=enabled
           docker buildx build --platform linux/arm64 --load --progress plain -t github-pages . --push
       - run:
           name: Build application Docker image
