One platform at a time

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,12 @@ jobs:
       - setup_remote_docker:
           version: 19.03.14
       - checkout
-      - run: |
-          export DOCKER_CLI_EXPERIMENTAL=enabled
-          docker buildx build --platform=linux/amd64,linux/arm64 -t mrseccubus/githubpages:latest --push --progress plain .
+      - run: 
+          name : Build arm64
+          command : |
+            export DOCKER_CLI_EXPERIMENTAL=enabled
+            docker buildx build --platform=linux/arm64 -t mrseccubus/githubpages:latest --push --progress plain .
+      - run: 
+          name : Build amd64
+          command : |
+            docker build -t mrseccubus/githubpages:latest .
