--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,6 @@ jobs:
       - setup_remote_docker
       - run: |
           docker buildx build \
-            --platform linux/arm64/v8,linux/amd64 \
+            --platform linux/arm64,linux/amd64 \
             --progress plain \
             --tag mrseccubus/github-pages:latest . 
