--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
+      - run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
       - run: |
           docker buildx build \
             --platform linux/amd64,linux/arm64 \
